--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
+    "express": "^4.16.3",
     "firebase": "^5.4.2",
+    "http": "0.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.5.0",
     "react-modal": "^3.5.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-sliding-pane": "^2.0.2",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "ws": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
