--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "1.1.5",
     "react-sliding-pane": "^2.0.2",
     "reactstrap": "^6.4.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "ws": "^6.0.0"
