--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-fileupload": "^1.0.0-alpha.1",
     "firebase": "^5.4.2",
     "http": "0.0.0",
+    "morgan": "^1.9.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.5.0",
-    "react-firebase-file-uploader": "^2.4.2",
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
