--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ws": "^6.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
