--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "node server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd src && npm install && npm run build"
   }
 }
