--- a/src/package.json
+++ b/src/package.json
@@ -1,3 +1,8 @@
 {
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000",
+  "scripts": {
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
