--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "cd src && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   }
 }
