--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "champion-steno-lightboard",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.x"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
