--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   },
   "private": true,
   "dependencies": {
-    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-fileupload": "^1.0.0-alpha.1",
     "http": "0.0.0",
+    "path": "^0.12.7",
     "ws": "^6.0.0"
   },
   "scripts": {
