--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "champion-steno-lightboard",
   "version": "0.1.0",
   "engines": {
-    "node": "10.x"
+    "node": "10.x",
+    "npm": "6.x"
   },
   "private": true,
   "dependencies": {
