--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ws": "^6.0.0"
   },
   "scripts": {
-    "start": "node server/app.js",
+    "start": "node app.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   }
 }
