--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "engines": {
     "node": "10.x",
-    "npm": "6.x"
+    "npm": "6.4.1"
   },
   "private": true,
   "dependencies": {
     "cors": "^2.8.4",
+    "cowsay": "^1.3.1",
     "express": "^4.16.3",
     "express-fileupload": "^1.0.0-alpha.1",
     "http": "0.0.0",
