--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   },
   "private": true,
   "dependencies": {
+    "bufferutil": "4.0.0",
     "cors": "^2.8.4",
     "cowsay": "^1.3.1",
     "express": "^4.16.3",
     "express-fileupload": "^1.0.0-alpha.1",
     "http": "0.0.0",
     "path": "^0.12.7",
-    "ws": "^6.0.0"
+    "utf-8-validate": "5.0.1",
+    "ws": "6.1.0"
   },
   "scripts": {
     "start": "node app.js",
