Fixed user login.

--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
+    "uuid": "^3.3.2",
     "ws": "^6.0.0"
   },
   "scripts": {
