--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-sliding-pane": "^2.0.2",
     "reactstrap": "^6.4.0",
     "recompose": "^0.30.0",
+    "reconnecting-websocket": "^4.1.5",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "uuid": "^3.3.2",
