--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^16.5.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.5.0",
+    "react-favicon": "0.0.14",
     "react-filepond": "^4.0.0",
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
