--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "cors": "^2.8.4",
     "cowsay": "^1.3.1",
     "express": "^4.16.3",
-    "express-fileupload": "^1.0.0-alpha.1",
     "http": "0.0.0",
+    "multer": "^1.4.1",
     "path": "^0.12.7",
     "utf-8-validate": "5.0.1",
     "ws": "6.1.0"
