--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "filepond-plugin-file-metadata": "^1.0.2",
     "filepond-plugin-file-rename": "^1.1.0",
     "filepond-plugin-file-validate-type": "^1.1.0",
+    "filepond-plugin-image-preview": "^3.1.1",
     "firebase": "^5.4.2",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
