--- a/client/package.json
+++ b/client/package.json
@@ -11,19 +11,22 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
-    "filepond-plugin-file-metadata": "^1.0.2",
-    "filepond-plugin-file-rename": "^1.1.0",
-    "filepond-plugin-file-validate-type": "^1.1.0",
+    "filepond": "^3.2.4",
+    "filepond-plugin-file-validate-type": "^1.2.0",
     "filepond-plugin-image-preview": "^3.1.1",
+    "filepond-plugin-image-resize": "^2.0.1",
     "firebase": "^5.4.2",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.5.0",
+    "react-dropzone": "^6.2.4",
     "react-favicon": "0.0.14",
-    "react-filepond": "^4.0.0",
+    "react-filepond": "^5.0.0",
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.1.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-sliding-pane": "^2.0.2",
@@ -37,6 +40,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "startdev": "REACT_APP_ENV=dev react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
