--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "filepond": "^3.2.4",
+    "filepond-plugin-file-validate-size": "^2.0.0",
     "filepond-plugin-file-validate-type": "^1.2.0",
     "filepond-plugin-image-preview": "^3.1.1",
     "filepond-plugin-image-resize": "^2.0.1",
