Fixing some more stuff.

--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "startdev": "REACT_APP_ENV=dev react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
