--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "filepond": "^3.3.0",
     "filepond-plugin-file-validate-size": "^2.0.0",
     "filepond-plugin-file-validate-type": "^1.2.0",
